# mobile-sci-fi-endless-runner-server

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  spacetime.json  spacetime.local.json
.github/: copilot-instructions.md
client-sdk/src/: API.cs
docs/: SpacetimeDB+SpacetimeDSL.md
docs/to-do/: leaderboard-impl-plan.md
scripts/: fmt.sh  regenerate-bindings-for-client.sh  run.sh
src/: add_to_wallet.rs  authenticated_player.rs  ban_player.rs  cheat_attempt_log.rs  constants.rs  daily_reward_gems.rs  lib.rs  player_name_generator.rs  purchase_price.rs  remove_from_wallet.rs  revive.rs
src/admin/: ban_player.rs  init_database.rs  manage_config.rs  unban_player.rs
src/checks/: is_admin_client.rs  is_same_local_day.rs  non_ended_playthrough.rs  player_has_playthrough.rs  playthrough_is_active.rs  playthrough_is_active_and_unpaused.rs  playthrough_is_in_pause.rs  playthrough_is_paused.rs  revive_is_allowed.rs
src/energy/: calculation.rs  purchase.rs  scheduling.rs
src/hooks/: after_player_insert.rs
src/procedures/: handle_in_app_purchase.rs
src/reducers/: apply_cosmetic.rs  begin_ad_watch.rs  begin_playthrough.rs  claim_daily_reward.rs  connect_client.rs  continue_playthrough.rs  disconnect_client.rs  end_ad_watch.rs  end_playthrough.rs  make_purchase.rs  pause_playthrough.rs  rename_player.rs  sync_time.rs  use_power_up.rs
src/scheduled_functions/: check_player_names.rs  energy_depletion.rs  refresh_google_play_android_developer_api_access_token.rs
src/shop/: cosmetic.rs  power_up.rs  power_up_upgrade.rs
src/tables/: advertisement.rs  (+16 more)
(+96 files in other folders)
