[package]
name = "sci-fi-endless-runner-server"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
spacetimedb = { version = "2.0.2" }
spacetimedsl = { version = "0.20.1" }
strum = { version = "0.27.2", features = ["derive"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
